# thinktwiceutils

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: BRANCHING_STRATEGY.md
.github/workflows/: ci.yml  version.yml
src/thinktwiceutils/: README.md  __init__.py  _version.py  dependencies.py
src/ttutils/: __init__.py  _version.py
src/ttutils/dependencies/: README.md  dependencies.py
src/ttutils/simplereturns/: README.md  __init__.py
tests/: test_dependencies.py  test_simplereturns.py
